# boardkit

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPECS_V0.md  appState.md  designsystem-example.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.workspace.ts
.claude/: WORKFLOW.md
.claude/agents/: canvas-interactions-engineer.md  design-system-guardian.md  docs-scribe.md  frontend-architect.md  module-integrator.md  persistence-and-file-format.md  security-reviewer.md  senior-reviewer.md  tauri-desktop-integrator.md  test-runner.md
.claude/commands/: docs.md  enhance.md  explore.md  feature.md  fix.md  hotfix.md  land.md  module.md  plan.md  refactor.md  resume.md  review.md  status.md  style.md  test.md  typo.md
.claude/plans/: joyful-nibbling-moler.md  mellow-giggling-cosmos.md
.claude/rules/: philosophy.md  security.md  typescript.md  vue-patterns.md
apps/desktop/: package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  uno.config.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: README.md  nuxt.config.ts  package.json  uno.config.ts
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
docs/: LANDING_PAGE_SPEC.md  LAUNCH_PLAN.md  MODULE_DEVELOPMENT.md  PLUGIN_DEVELOPMENT.md  SPECS_CANVAS_NATIVE.md  SPECS_DATA_SHARING_POC.md
scripts/: build-dmg.sh
(+91 files in other folders)
